--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "effector": "^22.4.0",
+    "effector-react": "^22.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
