[+] список трат, небольшие улучшения

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "components/*": ["./components/*"],
       "pages/*": ["./pages/*"],
       "types/*": ["./types/*"],
-      "utils/*": ["./utils/*"]
+      "utils/*": ["./utils/*"],
+      "config/*": ["./config/*"]
     }
   },
   "include": ["src"],
