--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.0.1",
     "babel-plugin-styled-components": "^2.0.7",
     "chart.js": "^4.0.1",
+    "dayjs": "^1.11.6",
     "effector": "^22.4.0",
     "effector-react": "^22.3.4",
     "react": "^18.2.0",
