--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier:write": "prettier --write ."
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "antd": "^5.0.1",
     "babel-plugin-styled-components": "^2.0.7",
     "chart.js": "^4.0.1",
