--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "effector-react": "^22.3.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
