[+] базовые модели данных

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "pages/*": ["./pages/*"],
       "types/*": ["./types/*"],
       "utils/*": ["./utils/*"],
-      "config/*": ["./config/*"]
+      "config/*": ["./config/*"],
+      "models/*": ["./models/*"]
     }
   },
   "include": ["src"],
